crates/escalier_old_parser/src/snapshots/escalier_parser__tests__declarations-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let x = (a, b) => a + b;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 24,
                    },
                },
                span: 0..24,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "x",
                                    mutable: false,
                                    span: 4..5,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 23,
                                    },
                                },
                                span: 8..23,
                                kind: Lambda(
                                    Lambda {
                                        params: [
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                    },
                                                    span: 9..10,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "a",
                                                            mutable: false,
                                                            span: 9..10,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 9,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 10,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: None,
                                                optional: false,
                                            },
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 12..13,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: false,
                                                            span: 12..13,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 12,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 13,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: None,
                                                optional: false,
                                            },
                                        ],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 18,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                },
                                                span: 18..23,
                                                kind: BinaryExpr(
                                                    BinaryExpr {
                                                        op: Add,
                                                        left: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 18,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 19,
                                                                },
                                                            },
                                                            span: 18..19,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 18,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 19,
                                                                        },
                                                                    },
                                                                    span: 18..19,
                                                                    name: "a",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        right: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 23,
                                                                },
                                                            },
                                                            span: 22..23,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 22,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 23,
                                                                        },
                                                                    },
                                                                    span: 22..23,
                                                                    name: "b",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
