crates/escalier_old_parser/src/snapshots/escalier_parser__tests__declarations.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let x = 5;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 10,
                    },
                },
                span: 0..10,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "x",
                                    mutable: false,
                                    span: 4..5,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 8..9,
                                kind: Lit(
                                    Num(
                                        Num {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 9,
                                                },
                                            },
                                            span: 8..9,
                                            value: "5",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
